# yorku-EECS-3431-3D-computer-graphics-assignment-3

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  invert.cpp  objects.h  parsefile.cpp  parsefile.h  ppm.cpp  ppm.h  ray_utils.cpp  ray_utils.h  raytrace.cpp  testReflection.txt
